--- a/src/main/webapp/common/partials/breadcrumb.html
+++ b/src/main/webapp/common/partials/breadcrumb.html
@@ -1,6 +1,6 @@
 <ol class="ab-nav breadcrumb">
     <li>
-        <a href="#/etusivu"><span>Valintaperusteet ja hakukohteet</span></a>
+        <a href="#/etusivu"><span>Valintaryhmät ja hakukohteet</span></a>
     </li>
     <li ng-repeat="breadcrumb in breadcrumbs.get() track by breadcrumb.path" ng-class="{ active: $last }">
         <a ng-if="!$last" ng-href="#{{ breadcrumb.path }}" ng-bind="breadcrumb.label"></a>
