select elementin css korjaus syöteparametreissä

--- a/src/main/webapp/common/css/other.css
+++ b/src/main/webapp/common/css/other.css
@@ -250,3 +250,8 @@ table.table td {
 input[type="date"] {
     height: 40px;
 }
+
+.settingstable select, .settingstable option {
+    width: 50%;
+    overflow: hidden;
+}
