--- a/src/main/webapp/common/css/virkailija.css
+++ b/src/main/webapp/common/css/virkailija.css
@@ -1544,6 +1544,25 @@ table.dropmenu-table {
     background-color: #e39000;
     box-shadow: 0 3px 6px #aa6a01 inset, 0 -1px 4px rgba(0, 0, 0, 0.05) inset; }
 
+.btn-file {
+  position: relative;
+  overflow: hidden; }
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 999px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block; }
+
 .btn {
   padding: 0px 13px;
   height: 36px;
@@ -2399,15 +2418,15 @@ dl.dl-horizontal {
     .gradingformula-dragged .placeholder:last-child:before {
       display: none; }
 
-.gradingformula-dragged {
-  position: absolute;
-  pointer-events: none;
-  z-index: 9999;
-  list-style-type: none;
-  padding: 0px 0px 0px 18px;
-  border: 1px dashed #bbbbbb;
-  background-color: transparent;
-  background-color: rgba(255, 255, 255, 0.75); }
+.alikaava {
+  color: #B0B0B0 !important;
+  /*
+  list-style-type:none;
+    padding:0px 0px 0px 18px;
+
+    border: 1px dashed #666;
+    background-color: #f8f8f8;
+    */ }
 
 /*** Valintaperusteiden valintaryhmien ja hakukohteiden drag & drop + laskentakaavaeditorin drag & drop
 ************************************************/
