Hae YO-arvosana -funktiokutsun asetuksista tyylibugit korjattu

--- a/src/main/webapp/common/css/other.css
+++ b/src/main/webapp/common/css/other.css
@@ -251,7 +251,11 @@ input[type="date"] {
     height: 40px;
 }
 
-.settingstable select, .settingstable option {
+.settingstable select {
+    width: 100%;
+}
+
+.settingstable option {
     overflow: hidden;
 }
 
