VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/common/partials/organisaatioSelector.html
+++ b/src/main/webapp/common/partials/organisaatioSelector.html
@@ -21,7 +21,7 @@
 
 <div ng-controller="OrganisaatioTreeController">
     <button type="button" class="btn btn-sm btn-default" ng-click="show()"><i
-            class="fa fa-plus"></i> Organisaatio
+            class="fa fa-plus"></i> {{ t('organisaatioselector.organisaatio') || 'Organisaatio' }}
     </button>
 
     <modal modal-template="../common/partials/organisaatio.html"></modal>
