--- a/src/main/webapp/common/partials/hakukohdekoodinValinta.html
+++ b/src/main/webapp/common/partials/hakukohdekoodinValinta.html
@@ -1,17 +1,17 @@
-<div class="modal-header"><h3>Hakukohdekoodin lisäys</h3></div>
+<div class="modal-header"><h3>{{ t('hakukohdekoodinvalinta.header') || 'Hakukohdekoodin lisäys' }}</h3></div>
 <div class="modal-body">
     <div filterable-list class="autocomplete">
         <div class="form-row">
             <button type="button" class="btn btn-sm btn-default" ng-click="addHakukohdeUri(selectedId)"
-                    ng-disabled="!selectedId"><i class="fa fa-plus"></i> Hakukohdekoodi
+                    ng-disabled="!selectedId"><i class="fa fa-plus"></i> {{ t('hakukohdekoodinvalinta.hakukohdekoodi') || 'Hakukohdekoodi' }}
             </button>
         </div>
 
         <div class="ac-selection">
-            <h3 class="margin-top-0">Valittu hakukohdekoodi: {{selectedId}}</h3>
+            <h3 class="margin-top-0">{{ t('hakukohdekoodinvalinta.valittu') || 'Valittu hakukohdekoodi' }}: {{selectedId}}</h3>
         </div>
 
-        <input class="width-60 ac-filter search" type="text" placeholder="Suodata hakukohdekoodeja"
+        <input class="width-60 ac-filter search" type="text" placeholder="{{ t('hakukohdekoodinvalinta.suodata') || 'Suodata hakukohdekoodeja' }}"
                ng-model="hakukohdekoodifilter"/>
 
         <ul class="ac-options" ng-show="model.hakukohdekoodit">
@@ -26,5 +26,5 @@
 </div>
 <div class="modal-footer">
     <a class="btn btn-default btn-sm" ng-click="sulje();"
-       role="button">Sulje</a>
+       role="button">{{ t('hakukohdekoodinvalinta.sulje') || 'Sulje' }}</a>
 </div>
