--- a/src/main/webapp/common/partials/organisaatio.html
+++ b/src/main/webapp/common/partials/organisaatio.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
-    <h3>Valintaryhmän liittäminen organisaatioon</h3>
+    <h3>{{ t('organisaatio.header') || 'Valintaryhmän liittäminen organisaatioon' }}</h3>
 </div>
 
 <div class="modal-body">
-    <input type="text" class="search" placeholder="Lisää organisaatioita" ng-model="orgTree.searchStr"/>
+    <input type="text" class="search" placeholder="{{ t('organisaatio.lisaa') || 'Lisää organisaatioita' }}" ng-model="orgTree.searchStr"/>
     <i class="fa fa-trash-o organisaatio" ng-click="clear()"></i>
     <br/>
     <span>Hakutuloksia: {{orgTree.model.numHits || 0}}</span>
@@ -14,5 +14,5 @@
 </div>
 <div class="modal-footer">
     <a class="btn btn-default btn-sm" ng-click="sulje();"
-       role="button">Sulje</a>
+       role="button">{{ t('organisaatio.sulje') || 'Sulje' }}</a>
 </div>
