--- a/src/main/webapp/common/partials/valintakoekoodinValinta.html
+++ b/src/main/webapp/common/partials/valintakoekoodinValinta.html
@@ -1,17 +1,17 @@
-<div class="modal-header"><h3>Valintakoekoodin lisäys</h3></div>
+<div class="modal-header"><h3>{{ t('valintakoekoodinvalinta.header') || 'Valintakoekoodin lisäys' }}</h3></div>
 <div class="modal-body">
     <div filterable-list class="autocomplete">
         <div class="form-row">
             <button type="button" class="btn btn-sm btn-default" ng-click="addValintakoeUri(selectedId)"
-                    ng-disabled="!selectedId"><i class="fa fa-plus"></i> Valintakoekoodi
+                    ng-disabled="!selectedId"><i class="fa fa-plus"></i> {{ t('valintakoekoodinvalinta.valintakoekoodi') || 'Valintakoekoodi' }}
             </button>
         </div>
 
         <div class="ac-selection">
-            <h3 class="margin-top-0">Valittu valintakoekoodi: {{selectedId}}</h3>
+            <h3 class="margin-top-0">{{ t('valintakoekoodinvalinta.valittu') || 'Valittu valintakoekoodi' }}: {{selectedId}}</h3>
         </div>
 
-        <input class="width-60 ac-filter search" type="text" placeholder="Suodata valintakoekoodeja"
+        <input class="width-60 ac-filter search" type="text" placeholder="{{ t('valintakoekoodinvalinta.suodata') || 'Suodata valintakoekoodeja' }}"
                ng-model="valintakoekoodifilter"/>
 
         <ul class="ac-options" ng-show="model.valintakoekoodit">
@@ -25,5 +25,5 @@
 </div>
 <div class="modal-footer">
     <a class="btn btn-default btn-sm" ng-click="sulje();"
-       role="button">Sulje</a>
+       role="button">{{ t('valintakoekoodinvalinta.sulje') || 'Sulje' }}</a>
 </div>
