--- a/src/main/webapp/common/partials/organisaatioSelector.html
+++ b/src/main/webapp/common/partials/organisaatioSelector.html
@@ -20,7 +20,7 @@
 
 
 <div ng-controller="OrganisaatioTreeController">
-    <button type="button" class="btn btn-sm btn-default" ng-click="show()"><i
+    <button auth ng-disabled="!userAccess.updateOrg" type="button" class="btn btn-sm btn-default" ng-click="show()"><i
             class="fa fa-plus"></i> {{ t('organisaatioselector.organisaatio') || 'Organisaatio' }}
     </button>
 
