--- a/src/main/webapp/common/partials/valintaryhmaValitsin.html
+++ b/src/main/webapp/common/partials/valintaryhmaValitsin.html
@@ -38,12 +38,12 @@
         </div>
     </div>
 -->
-    <div class="form-group">
-        <label class="col-sm-2"></label>
-        <div class="col-sm-10">
-            <button class="btn btn-sm btn-default margin-bottom-2" ng-click="valintaryhmaPuu.expandTree()"> <i class="fa fa-expand"></i> {{t('valintaryhmaselector.avaa') || 'Avaa puu' }}</button>
-        </div>
-    </div>
+    <!--<div class="form-group">-->
+        <!--<label class="col-sm-2"></label>-->
+        <!--<div class="col-sm-10">-->
+            <!--<button class="btn btn-sm btn-default margin-bottom-2" ng-click="valintaryhmaPuu.expandTree()"> <i class="fa fa-expand"></i> {{t('valintaryhmaselector.avaa') || 'Avaa puu' }}</button>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="valintaryhmaSelector">
         <ol class="treelist collapsible">
