--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -188,6 +188,48 @@ table.dropmenu-table {
 }
 
 
+/*** Funktiokutsun valintataulukko
+************************************************/
 
+table.funktiokutsut {
+    border-collapse: separate;
+    border-spacing: 1px;
 
+    thead {
 
+        th {
+            @include background-image("table-header-bg.png");
+            background-repeat: repeat;
+            background-position: left top;
+            text-align: center;
+            border: 1px solid #ccc;
+            padding: 0.5em 1em 0.5em 1em;
+
+        }
+
+    }
+
+    tbody {
+
+        td {
+            padding: 0.5em;
+            background: #eee;
+            border: 1px solid #ccc;
+            @include transitions(background-color, 0.1s);
+            padding: 0.5em 1.5em 0.5em 1.5em;
+            text-align: center;
+
+            &:hover {
+                background-color: #fff5da;
+                @include box-shadow(0px 0px 2px 0 rgba(0,0,0,0.7) inset);
+            }
+
+            &:active {
+                background-color: #999;
+                color: white;
+                @include box-shadow(0px 0px 1px 0 rgba(0,0,0,0.5) inset);
+            }
+        }
+
+    }
+}
