--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -194,20 +194,7 @@ table.dropmenu-table {
 table.funktiokutsut {
     border-collapse: separate;
     border-spacing: 1px;
-
-    thead {
-
-        th {
-            @include background-image("table-header-bg.png");
-            background-repeat: repeat;
-            background-position: left top;
-            text-align: center;
-            border: 1px solid #ccc;
-            padding: 0.5em 1em 0.5em 1em;
-
-        }
-
-    }
+    width: 100%;
 
     tbody {
 
