added padding and state to human readable state

--- a/sass/components/_jononhallinta.scss
+++ b/sass/components/_jononhallinta.scss
@@ -1,5 +1,10 @@
 /*** jononhallinta
 ************************************************/
+#application-wrapper {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
 #stateSelector {
     font-family: sans-serif;
     font-size: 12px;
