--- a/sass/components/_jononhallinta.scss
+++ b/sass/components/_jononhallinta.scss
@@ -44,16 +44,15 @@
 
     .jobListItem {
       background-color: #ffffff;
-      height: 120px;
+      height: 130px;
       margin-bottom: 10px;
       padding: 13px;
-      padding-top: 20px;
       box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
     }
 
     /* Left side details, job name, user, running time, progress bar etc. */
     .details {
-      width: 25%;
+      width: 30%;
       display: -ms-flex;
       display: -webkit-flex;
       display: flex;
@@ -106,6 +105,9 @@
             height: 8px;
           }
         }
+        .progress-bar-cancelled {
+          background-color: #B3B3B3;
+        }
         .progressPercent {
           width: 15%;
           font-size: 12px;
@@ -120,7 +122,7 @@
 
     /* Description block including action button(s)*/
     .description {
-      width: 75%;
+      width: 70%;
       font-family: sans-serif;
       font-size: 14px;
       color: #2A2A2A;
