--- a/sass/components/_jononhallinta.scss
+++ b/sass/components/_jononhallinta.scss
@@ -1,145 +1,175 @@
 /*** jononhallinta
 ************************************************/
-#application-wrapper {
-  padding-left: 50px;
-  padding-right: 50px;
-}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
-#stateSelector {
-    font-family: sans-serif;
+$open-sans: 'Open Sans';
+
+body {
+  background-color: #fafafa;
+  font-family: $open-sans;
+  font-color: #2A2A2A;
+
+  #heading {
+    font-size: 20px;
+  }
+
+  #application-wrapper {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  #stateSelector {
     font-size: 12px;
     background-color: #F0F0F0;
     color: #707070;
     margin-top: 30px;
     padding-left: 15px;
-}
-
-#stateSelectorPanelBody {
-    padding: 5px;
-}
-
-#stateSelector .btn-stateSelectorButton {
-    color: #4A4A4A;
-    background-color: #E3E3E3;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
     border-radius: 2px;
-    font-size: 14px;
-    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1);
-}
 
-#stateSelector .active {
-  color: #ffffff;
-  background-color: #159ECB;
-}
-
-#jobList {
-
-  .flexContainer {
-    padding-top: 20px;
-    display: -ms-flex;
-    display: -webkit-flex;
-    display: flex;
-
-    .jobListItem {
-      background-color: #ffffff;
-      height: 130px;
-      margin-bottom: 10px;
-      padding: 13px;
-      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+    #stateSelectorPanelBody {
+      padding: 5px;
     }
 
-    /* Left side details, job name, user, running time, progress bar etc. */
-    .details {
-      width: 30%;
+    .stateFilterItemCount {
+      color: #8A8A8A;
+    }
+
+    .stateFilterItemCountActive {
+      color: #8fcee2;
+    }
+
+    .selectionIcon {
+      width: 10px;
+    }
+
+    .btn-stateSelectorButton {
+        color: #4A4A4A;
+        background-color: #E3E3E3;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-left: 10px;
+        border-radius: 2px;
+        font-size: 14px;
+        box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1);
+    }
+
+    .active {
+      color: #ffffff;
+      background-color: #159ECB;
+    }
+  }
+
+  #jobList {
+
+    .flexContainer {
+      padding-top: 20px;
       display: -ms-flex;
       display: -webkit-flex;
       display: flex;
-      flex-direction: column;
 
-      .top {
-        width: 100%;
-        .jobItemHeading {
-          font-size: 16px;
-        }
-        .jobItemStartTime {
-          font-size: 14px;
-        }
+      .jobListItem {
+        background-color: #ffffff;
+        height: 130px;
+        margin-bottom: 10px;
+        padding: 13px;
+        box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
       }
-      .middle {
-        padding-top: 10px;
-        width: 100%;
 
-        .jobItemUser {
-            padding-top: 5px;
-            padding-bottom: 5px;
-            font-size: 0.75em;
-        }
-        .jobItemRunningTime {
-            margin-left: 10px;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            font-size: 0.75em;
-        }
-        .jobItemErrors {
-            margin-left: 5px;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            font-size: 0.8em;
-            color: #EE1C25;
-        }
-        .errorLink {
-            color: #EE1C25;
-        }
-      }
-      .bottom {
-        padding-top: 25px;
+      /* Left side details, job name, user, running time, progress bar etc. */
+      .details {
+        width: 30%;
         display: -ms-flex;
         display: -webkit-flex;
         display: flex;
+        flex-direction: column;
 
-        .progressBar {
-          width: 85%;
-          .progress {
-            height: 8px;
+        .top {
+          width: 100%;
+          .jobItemHeading {
+            font-size: 16px;
+          }
+          .jobItemStartTime {
+            font-size: 14px;
           }
         }
-        .progress-bar-cancelled {
-          background-color: #B3B3B3;
-        }
-        .progressPercent {
-          width: 15%;
+        .middle {
+          padding-top: 10px;
+          width: 100%;
           font-size: 12px;
-          color: #2A2A2A;
-          padding-left: 5px;
-          margin-top: -4px;
-          text-align: center;
+          a {
+            color: #2A2A2A;
+          }
+          .jobItemUser {
+            width: 18px;
+          }
+          .jobItemRunningTime {
+            margin-left: 15px;
+            width: 18px;
+          }
+          .jobItemErrors {
+            margin-left: 15px;
+            width: 18px;
+          }
+          .errorLink {
+              color: #EE1C25;
+          }
         }
+        .bottom {
+          padding-top: 25px;
+          display: -ms-flex;
+          display: -webkit-flex;
+          display: flex;
 
-      }
-    }
+          .progressBar {
+            width: 85%;
+            .progress {
+              height: 8px;
+            }
+          }
+          .progress-bar-cancelled {
+            background-color: #B3B3B3;
+          }
+          .progress-bar-completed {
+            background-color: #159ecb;
+          }
+          .progressPercent {
+            width: 15%;
+            font-size: 12px;
+            color: #2A2A2A;
+            padding-left: 5px;
+            margin-top: -4px;
+            text-align: center;
+          }
 
-    /* Description block including action button(s)*/
-    .description {
-      width: 70%;
-      font-family: sans-serif;
-      font-size: 14px;
-      color: #2A2A2A;
-      .jobItemDescription {
-        height: 30%;
+        }
       }
-      .actionButton:hover {
-        color: red;
-      }
-    }
 
-    .glyph-background {
-        padding: 7.5px;
-        position:relative;
-        border-radius:50%;
-        background: #EBEBEB;
-        z-index:2;
+      /* Description block including action button(s)*/
+      .description {
+        width: 70%;
+        font-size: 14px;
+        color: #2A2A2A;
+        .jobItemDescription {
+          padding-bottom: 5px;
+          .jobItemName {
+            height: 30%;
+          }
+          .jobItemDetails {
+            height: 70%;
+          }
+          .actionButton:hover {
+            color: red;
+          }
+        }
+      }
+
+      .glyph-background {
+          padding: 7.5px;
+          position:relative;
+          border-radius:50%;
+          background: #EBEBEB;
+          z-index:2;
+      }
     }
   }
 }
